[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tumbl4"
version = "0.1.0"
description = "Command-line Tumblr blog backup tool for macOS and Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Claire" },
]
keywords = ["tumblr", "backup", "archive", "cli", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving :: Backup",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "aiofiles>=24.1",
    "aiolimiter>=1.1",
]

[project.optional-dependencies]

[project.scripts]
tumbl4 = "tumbl4.cli.app:main"

[project.urls]
Repository = "https://github.com/claire/tumbl4"
Issues = "https://github.com/claire/tumbl4/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tumbl4"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tumbl4",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = [
    "docs",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
    "TID",   # flake8-tidy-imports — used for cli/core boundary
    "SIM",   # flake8-simplify
    "PL",    # pylint subset
    "S",     # flake8-bandit — security
]
ignore = [
    "S101",  # assert is fine in tests
    "PLR0913",  # allow many args on core functions; revisit after slice 2
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "PLR2004"]  # tests can use magic values + no bandit

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tumbl4.cli".msg = "core modules must not import from cli; see spec §3."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src/tumbl4", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

# Strict on correctness-critical subpackages
[[tool.pyright.executionEnvironments]]
root = "src/tumbl4/core"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/tumbl4/models"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/tumbl4"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
